--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -84,6 +84,10 @@
   margin-top: 0.5rem;
 }
 
+.ml-7 {
+  margin-left: 1.75rem;
+}
+
 .block {
   display: block;
 }
@@ -204,6 +208,10 @@
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
+.self-stretch {
+  align-self: stretch;
 }
 
 .self-baseline {
@@ -1041,6 +1049,10 @@ video {
 
   .sm-x\:hidden {
     display: none;
+  }
+
+  .sm-x\:self-stretch {
+    align-self: stretch;
   }
 }
 
