--- a/app_/views/index.ejs
+++ b/app_/views/index.ejs
@@ -132,7 +132,7 @@
     </div>
     <main class="bg-white dark:bg-gray-800"> 
 
-      <div id="home" class="aspect-[2/1] container mx-auto grid grid-cols-1 md:grid-cols-2 px-3 py-6 text-gray-700 dark:text-gray-200">
+      <div id="home" class="aspect-[2/1] container mx-auto grid grid-cols-1 sm:grid-cols-2 px-3 pt-4 text-gray-700 dark:text-gray-200">
         <div id="_name" class="flex items-center justify-center">
           <div>
             <p class="text-white bg-blue-950 dark:bg-white dark:text-blue-950 font-semibold py-2 px-6 rounded-none rounded-r-xl rounded-tl-xl inline-block mb-4">Hello, I'm</p>
@@ -175,8 +175,33 @@
         </div>
       </div>
 
-      <div id="about" class="bg-blue-900 aspect-[2/1] container mx-auto">
-        ABOUT
+      <div id="about" class="aspect-[2/1] container mx-auto grid gap-3 grid-cols-1 sm-x:grid-cols-2 px-3 pt-4 text-gray-700 dark:text-gray-200">
+        <div class="flex items-center justify-center">
+          <img x-bind:src="dark ? 'https://cdn-icons-png.flaticon.com/512/10438/10438224.png' : 'https://cdn-icons-png.flaticon.com/512/10438/10438224.png'" alt="__--__">
+        </div>
+        <div class="flex items-center justify-center">
+          <div>
+            <h1 class="text-4xl py-6 text-center sm-x:text-left">About Me</h1>
+            <p class="text-xl text-justify">
+              I am an highly motivated and detail-oriented web developer with over 2 years of experience in developing responsive websites and applications.
+              I love to work in groups where everyone can voice their opinions and ideas.
+            </p>
+            <div class="py-4 flex gap-3 flex-wrap">
+              <span class="inline-block px-4 py-2 border-2 rounded-md">HTML</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">JAVASCRIPT</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">JQUERY</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">CSS</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">PHP</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">LARAVEL</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">NODE</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">TYPESCRIPT</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">TAILWINDCSS</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">BOOTSTRAP</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">CSHARP</span>
+              <span class="inline-block px-4 py-2 border-2 rounded-md">REACTJS</span>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div id="skills" class="bg-blue-700 aspect-[2/1] container mx-auto">SKILLS</div>
