--- a/app_/views/index.ejs
+++ b/app_/views/index.ejs
@@ -132,7 +132,7 @@
     </div>
     <main class="bg-white dark:bg-gray-800"> 
 
-      <div id="home" class="aspect-[2/1] container mx-auto grid grid-cols-1 sm:grid-cols-2 px-3 pt-4 text-gray-700 dark:text-gray-200">
+      <div id="home" class="aspect-[16/3] container mx-auto grid grid-cols-1 sm:grid-cols-2 px-3 pt-4 text-gray-700 dark:text-gray-200">
         <div id="_name" class="flex items-center justify-center">
           <div>
             <p class="text-white bg-blue-950 dark:bg-white dark:text-blue-950 font-semibold py-2 px-6 rounded-none rounded-r-xl rounded-tl-xl inline-block mb-4">Hello, I'm</p>
@@ -176,7 +176,7 @@
       </div>
 
       <div id="about" class="aspect-[2/1] container mx-auto grid gap-3 grid-cols-1 sm-x:grid-cols-2 px-3 pt-4 text-gray-700 dark:text-gray-200">
-        <div class="flex items-center justify-center">
+        <div class="items-center justify-center hidden sm-x:flex">
           <img x-bind:src="dark ? 'https://cdn-icons-png.flaticon.com/512/10438/10438224.png' : 'https://cdn-icons-png.flaticon.com/512/10438/10438224.png'" alt="__--__">
         </div>
         <div class="flex items-center justify-center">
