--- a/app_/views/index.ejs
+++ b/app_/views/index.ejs
@@ -132,7 +132,7 @@
     </div>
     <main class="bg-white dark:bg-gray-800"> 
 
-      <div id="home" class="aspect-[16/3] container mx-auto grid grid-cols-1 sm:grid-cols-2 px-3 pt-4 text-gray-700 dark:text-gray-200">
+      <div id="home" class="aspect-[16/3] container mx-auto grid grid-cols-1 sm:grid-cols-2 px-3 pt-10 text-gray-700 dark:text-gray-200">
         <div id="_name" class="flex items-center justify-center">
           <div>
             <p class="text-white bg-blue-950 dark:bg-white dark:text-blue-950 font-semibold py-2 px-6 rounded-none rounded-r-xl rounded-tl-xl inline-block mb-4">Hello, I'm</p>
@@ -188,18 +188,18 @@
                 I love to work in groups where everyone can voice their opinions and ideas.
               </p>
               <div class="py-4 flex gap-3 flex-wrap">
-                <span class="inline-block px-4 py-2 border-2 rounded-md">HTML</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">JAVASCRIPT</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">JQUERY</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">CSS</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">PHP</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">LARAVEL</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">NODE</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">TYPESCRIPT</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">TAILWINDCSS</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">BOOTSTRAP</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">CSHARP</span>
-                <span class="inline-block px-4 py-2 border-2 rounded-md">REACTJS</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">HTML</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">JAVASCRIPT</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">JQUERY</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">CSS</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">PHP</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">LARAVEL</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">NODE</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">TYPESCRIPT</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">TAILWINDCSS</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">BOOTSTRAP</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">CSHARP</span>
+                <span class="inline-block px-4 py-2 border-2 dark:border-gray-600 border-gray-300 rounded-md">REACTJS</span>
               </div>
             </div>
           </div>
@@ -209,28 +209,28 @@
           <div class="grid grid-cols-1 sm-x:grid-cols-2 gap-10 lg:grid-cols-3 bg-gray-200 dark:bg-gray-700 rounded-lg py-4 px-10">
             <div>
               <div class="flex items-center justify-center">
-                <img src="https://www.shareicon.net/download/2015/10/06/112788_design_512x512.png" alt="ui-design">
+                <img class="size-20" src="https://www.shareicon.net/download/2015/10/06/112788_design_512x512.png" alt="ui-design">
               </div>
               <h1 class="text-center text-xl font-bold mb-6">UI UX Design</h1>
-              <p class="justify-center">
+              <p class="justify-center text-center">
                 Seamless and meaningful user experience, intuitive and aesthetically-pleasing interfaces and interactive elements.
               </p>
             </div>
             <div>
               <div class="flex items-center justify-center">
-                <img src="https://cdn-icons-png.freepik.com/512/9517/9517119.png" alt="ui-design">
+                <img class="size-20" src="https://cdn-icons-png.freepik.com/512/9517/9517119.png" alt="ui-design">
               </div>
               <h1 class="text-center text-xl font-bold mb-6">Web Development</h1>
-              <p class="justify-center">
+              <p class="justify-center text-center">
                 From developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services.
               </p>
             </div>
             <div class="col-span-1 sm-x:col-span-2 lg:col-span-1">
               <div class="flex items-center justify-center">
-                <img src="https://cdn0.iconfinder.com/data/icons/elpis/144/App_Development-512.png" alt="ui-design">
+                <img class="size-20" src="https://cdn0.iconfinder.com/data/icons/elpis/144/App_Development-512.png" alt="ui-design">
               </div>
               <h1 class="text-center text-xl font-bold mb-6">App Development</h1>
-              <p class="justify-center">
+              <p class="justify-center text-center">
                 Software for smartphones, tablets and digital assistants, most commonly for the Android and iOS operating systems.
               </p>
             </div>
