--- a/app_/views/index.ejs
+++ b/app_/views/index.ejs
@@ -345,84 +345,90 @@
           <h1 class="text-center font-bold text-xl tracking-widest py-4">Technical Skills</h1>
           <div class="grid grid-cols-1 sm:grid-cols-2 gap-7">
             
-            <div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">HTML</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
+            <div class="grid grid-cols-2 gap-3">
+              <div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">HTML</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
+                  </div>
+                </div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">CSS</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[60%] rounded-xl m-[0px] text-center font-bold">60%</div>
+                  </div>
+                </div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">Javascript</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[99%] rounded-xl m-[0px] text-center font-bold">99%</div>
+                  </div>
                 </div>
               </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">CSS</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[75%] rounded-xl m-[0px] text-center font-bold">75%</div>
+              <div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">PHP</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[99%] rounded-xl m-[0px] text-center font-bold">99%</div>
+                  </div>
                 </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">Javascript</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[99%] rounded-xl m-[0px] text-center font-bold">99%</div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">Node</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
+                  </div>
                 </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">PHP</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[99%] rounded-xl m-[0px] text-center font-bold">99%</div>
-                </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">Node</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
-                </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">Laravel</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[65%] rounded-xl m-[0px] text-center font-bold">65%</div>
-                </div>
-              </div>
-            </div>
-            
-            <div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">Jquery</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
-                </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">ReactJS</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
-                </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">Bootstrap</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[80%] rounded-xl m-[0px] text-center font-bold">80%</div>
-                </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">Tailwindcss</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[97%] rounded-xl m-[0px] text-center font-bold">97%</div>
-                </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">C#</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
-                </div>
-              </div>
-              <div class="py-4">
-                <h1 class="text-lg pl-3 py-3">Typescript</h1>
-                <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                  <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">Laravel</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[65%] rounded-xl m-[0px] text-center font-bold">65%</div>
+                  </div>
                 </div>
               </div>
             </div>
-
+            <div class="grid grid-cols-2 gap-3">
+              <div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">Jquery</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
+                  </div>
+                </div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">ReactJS</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
+                  </div>
+                </div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">Bootstrap</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[80%] rounded-xl m-[0px] text-center font-bold">80%</div>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">Tailwindcss</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[97%] rounded-xl m-[0px] text-center font-bold">97%</div>
+                  </div>
+                </div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">C#</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
+                  </div>
+                </div>
+                <div class="py-4">
+                  <h1 class="text-lg pl-3 py-3">Typescript</h1>
+                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
+                    <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div>
@@ -432,32 +438,73 @@
             <div class="py-4 text-center">
               <div class="skl-p-c spin-c-1 p-2">
               </div>
-              <h1 class="text-lg pl-3 py-3">Creativity</h1>
+              <h1 class="text-lg pl-3 py-3 font-semibold">Creativity</h1>
             </div>
 
             <div class="py-4 text-center">
               <div class="skl-p-c spin-c-2 p-2">
               </div>
-              <h1 class="text-lg pl-3 py-3">Team Work</h1>
+              <h1 class="text-lg pl-3 py-3 font-semibold">Team Work</h1>
             </div>
 
             <div class="py-4 text-center">
               <div class="skl-p-c spin-c-3 p-2">
               </div>
-              <h1 class="text-lg pl-3 py-3">Communication</h1>
+              <h1 class="text-lg pl-3 py-3 font-semibold">Communication</h1>
             </div>
 
             <div class="py-4 text-center">
               <div class="skl-p-c spin-c-4 p-2">
               </div>
-              <h1 class="text-lg pl-3 py-3">Project Management</h1>
+              <h1 class="text-lg pl-3 py-3 font-semibold">Project Management</h1>
             </div>
 
           </div>
         </div>
       </div>
 
-      <div id="exps" class="bg-blue-200 aspect-[2/1] container mx-auto">EXPERIENCES</div>
+      <div id="exps" class="aspect-[2/1] container mx-auto grid items-center justify-center grid-cols-1 px-3 py-4 text-gray-700 dark:text-gray-200">
+        <div class="grid gap-3 grid-cols-1 sm-x:grid-cols-2">
+          <div>
+            <h1 class="text-center font-bold text-xl tracking-widest py-4">Education</h1>
+            <div class="flex items-center justify-center flex-wrap">
+              <div class="bg-gray-200 dark:bg-gray-700 rounded-lg p-4">
+                <h1 class="text-2xl">IT Techniques from <span class="font-extralight">Cégep André-Laurendau</span></h1>
+                <h4 class="py-4 font-extralight text-xl">2024 - 2027</h4>
+                <p class="text-lg tracking-wide">
+                  Application development and computer network administration
+                </p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <h1 class="text-center font-bold text-xl tracking-widest py-4">Projects</h1>
+            <div class="flex gap-3 items-center justify-center flex-wrap">
+              <div class="bg-gray-200 dark:bg-gray-700 rounded-lg py-4 px-16 my-4">
+                <div class="flex gap-3 items-center">
+                  <img class="size-10" src="http://technopro.rf.gd/Icons/Favicons/Pronote_logo_package_version_3/favicon-32x32.png" alt="pronote-logo">
+                  <h1 class="text-3xl font-light">Pronote</h1>
+                </div>
+                <div class="flex items-center justify-center">
+                  <button class="dark:bg-transparent hover:dark:bg-gray-800 hover:border-transparent bg-gray-700 text-gray-200 py-2 px-8 my-4 rounded-lg font-light text-xl border-2"><a href="http://technopro.rf.gd/" target="_blank">Visit</a></button>
+                </div>
+              </div>
+              <div class="bg-gray-200 dark:bg-gray-700 rounded-lg py-4 px-16 my-4">
+                <div class="flex gap-3 items-center">
+                  <img class="size-10" src="https://static.vecteezy.com/system/resources/previews/009/341/840/original/time-clock-icon-sign-design-free-png.png" alt="pronote-logo">
+                  <h1 class="text-3xl font-light">InTime</h1>
+                </div>
+                <div class="flex items-center justify-center">
+                  <button class="dark:bg-transparent hover:dark:bg-gray-800 hover:border-transparent bg-gray-700 text-gray-200 py-2 px-8 my-4 rounded-lg font-light text-xl border-2"><a href="https://intime-tech.onrender.com/" target="_blank">Visit</a></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h1 class="text-center font-bold text-xl tracking-widest py-4 mt-10">Clients Reviews</h1>
+        </div>
+      </div>
 
       <div id="contact" class="bg-blue-600 aspect-[1] container mx-auto">CONTACT</div>
 
