--- a/app_/views/index.ejs
+++ b/app_/views/index.ejs
@@ -482,7 +482,7 @@
             <div class="flex gap-3 items-center justify-center flex-wrap">
               <div class="bg-gray-200 dark:bg-gray-700 rounded-lg py-4 px-16 my-4">
                 <div class="flex gap-3 items-center">
-                  <img class="size-10" src="http://technopro.rf.gd/Icons/Favicons/Pronote_logo_package_version_3/favicon-32x32.png" alt="pronote-logo">
+                  <img class="size-10" src="https://gitlab.com/projeto7850213/web/pronote/-/raw/master/Icons/Favicons/Pronote_logo_package_version_3/favicon-32x32.png?ref_type=heads" alt="pronote-logo">
                   <h1 class="text-3xl font-light">Pronote</h1>
                 </div>
                 <div class="flex items-center justify-center">
